# Crawler

./: .gitignore  KeywordCrawler.spec  README.md  pyproject.toml  requirements.txt  run_gui.py
crawler/: __init__.py  __main__.py  analyzer.py  article_fetcher.py  cli.py  config.py  detail_analyzer.py  engine.py  fetcher.py  filters.py  google_news.py  gui.py  models.py  naver_news.py  parser.py  robots.py  storage.py  visualizer.py
docs/: .bkit-memory.json  .pdca-status.json
docs/.pdca-snapshots/: snapshot-1770614518289.json
